# embodiedmae

./: .gitignore  README.md  pyproject.toml  test.py
embodied_mae/: __init__.py  configuration_embodiedmae.py  modeling_embodiedmae.py  modular_embodiedmae.py
